<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".ShowPostFragment">

    <androidx.constraintlayout.widget.Group
        android:id="@+id/click_on_post"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        app:constraint_referenced_ids="avatar_view,author_text_view,published_text_view,post_text"
        app:layout_constraintBottom_toBottomOf="@id/post_text"
        app:layout_constraintTop_toTopOf="@id/avatar_view" />

    <ImageView
        android:id="@+id/avatar_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/avatar_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintBottom_toTopOf="@id/published_text_view"
        app:layout_constraintEnd_toStartOf="@id/menu_button"
        app:layout_constraintStart_toEndOf="@id/avatar_view"
        app:layout_constraintTop_toTopOf="@id/avatar_view"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:textSize="@dimen/common_text_size"
        app:layout_constraintBottom_toBottomOf="@id/avatar_view"
        app:layout_constraintStart_toEndOf="@id/avatar_view"
        app:layout_constraintTop_toBottomOf="@id/author_text_view"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/menu_button"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/show_menu"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/avatar_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_spacing"
        app:constraint_referenced_ids="avatar_view,published_text_view,menu_button" />

    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/avatar_barrier"
        tools:text="@sample/posts.json/data/postText" />

    <ImageButton
        android:id="@+id/video_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/video_button"
        android:src="@drawable/ic_baseline_play_arrow_24"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/post_text" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/content_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="post_text, video_link" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/like_button"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_spacing"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        android:visibility="visible"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintEnd_toStartOf="@id/repost_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_barrier"
        tools:checked="true"

        tools:text="@sample/posts.json/data/likes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/repost_button"
        style="@style/Widget.AppTheme.RepostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:contentDescription="@string/repost_button"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@id/like_button"
        app:layout_constraintStart_toEndOf="@id/like_button"
        app:layout_constraintTop_toTopOf="@id/like_button"
        tools:text="@sample/posts.json/data/reposts" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/watches_icon"
        style="@style/Widget.AppTheme.RepostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/watches"
        android:enabled="false"
        app:icon="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="@id/like_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/like_button"
        tools:text="@sample/posts.json/data/watches" />

</androidx.constraintlayout.widget.ConstraintLayout>