<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/icon_button_min_size"
    tools:context=".NewPostFragment">

    <EditText
        android:id="@+id/new_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:hint="@string/hint_new_content"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="save_button,decline_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_button"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/save_button"
        android:paddingEnd="@dimen/common_spacing"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/decline_button"
        app:layout_constraintTop_toBottomOf="@+id/new_content"
        app:srcCompat="@drawable/ic_round_check_circle_outline_24"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/decline_button"
        style="@style/Widget.AppTheme.MenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/decline_button"
        android:paddingEnd="@dimen/common_spacing"
        android:visibility="visible"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/save_button"
        app:layout_constraintTop_toBottomOf="@id/new_content"
        app:srcCompat="@drawable/ic_round_decline_24"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>